--- a/presentation/index.html
+++ b/presentation/index.html
@@ -75,7 +75,7 @@
 				</section>
 
 				<section>
-					<h2>Perl 6 Is New</h2>
+					<h2>Perl 6 Is A New Language</h2>
 
 					<ul>
 						<li>First stable language release: December 25, 2015</li>
