--- a/presentation/index.html
+++ b/presentation/index.html
@@ -58,6 +58,9 @@
 	          </p>
           </div>
 
+          <p>Slides: <a
+              href="https://tpm-perf.perl6.party">tpm-perf.perl6.party</a></p>
+
           <!--p style="padding-top: 20px">This presentation is available at <a href="http://TMP2016-2.zoffix.com/">TPM2016-2.zoffix.com</a></p-->
 
 					<p style="padding-top: 20px;"><small style="opacity: .4">Use left/right arrows on keyboard (or tap and slide) to navigate
@@ -68,6 +71,11 @@
 				  <h2>Question Policy</h2>
 
 					<p>Just raise your hand and ask right away</p>
+
+          <h2 style="padding: 40px 0 0px; margin-bottom: 0">Slides</h2>
+
+          <p>Slides are at <a
+              href="https://tpm-perf.perl6.party">tpm-perf.perl6.party</a></p>
 				</section>
 
 				<section>
@@ -535,6 +543,9 @@ $ google-chrome out.html
 
 					<img src="2018-pics/logo-transparent-soft-black.png" alt=""
             style="box-shadow: none" width=250>
+
+          <p>Slides: <a
+              href="https://tpm-perf.perl6.party">tpm-perf.perl6.party</a></p>
 
 					<hr>
 
