--- a/presentation/index.html
+++ b/presentation/index.html
@@ -308,7 +308,7 @@ calc 50_000 for ^1000_000;
 # A MILLION calculations: 0.93 seconds
 
 </code></pre>
-          <p>20x faster</p>
+          <p>21215052x faster</p>
         </section>
 
         <section>
@@ -323,7 +323,7 @@ calc 50_000 for ^1000_000;
 # Run time: 0.32 seconds
 
 </code></pre>
-          <p>61x faster</p>
+          <p>61656249x faster than original (almost 2x faster than without `is pure`)</p>
         </section>
 
         <section>
